<resources>
    <string name="app_name">Simple Bank Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">log in</string>
    <string name="view_balance">view balance</string>
    <string name="transfer_funds">transfer funds</string>
    <string name="calculate_exchange">calculate exchange</string>
    <string name="pay_bills">pay bills</string>
    <string name="balance">Balance:</string>
    <string name="account_number">Account number</string>
    <string name="enter_amount">Enter amount</string>
    <string name="transfer">Transfer</string>
    <string name="convert_from">convert from</string>
    <string name="convert_to">convert to</string>
    <string name="calculate">calculate</string>
    <string name="enter_code">Enter code</string>
    <string name="show_bill_info">Show bill info</string>
    <string-array name="currency">
        <item>EUR</item>
        <item>GBP</item>
        <item>USD</item>
    </string-array>
</resources>
