<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TransferFundsFragment"
    android:layout_margin="16dp">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/transferFundsAccountEditText"
        android:hint="@string/account_number"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:gravity="center" />

    <EditText
        android:id="@+id/transferFundsAmountEditText"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/transferFundsAccountEditText"
        app:layout_constraintVertical_bias="0.3"
        android:gravity="center" />

    <Button
        android:id="@+id/transferFundsButton"
        android:text="@string/transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/transferFundsAmountEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>