<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CalculateExchangeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/calculateExchangeLabelFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/convert_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintHorizontal_bias="0.3"/>

    <TextView
        android:id="@+id/calculateExchangeLabelToTextView"
        android:textSize="20sp"
        android:text="@string/convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/calculateExchangeLabelFromTextView"
        app:layout_constraintTop_toBottomOf="@id/calculateExchangeLabelFromTextView"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/calculateExchangeFromSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/calculateExchangeLabelFromTextView"
        app:layout_constraintTop_toTopOf="@id/calculateExchangeLabelFromTextView"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/calculateExchangeToSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/calculateExchangeLabelFromTextView"
        app:layout_constraintTop_toTopOf="@id/calculateExchangeLabelToTextView"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/calculateExchangeDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <EditText
        android:id="@+id/calculateExchangeAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:hint="@string/enter_amount"
        android:textSize="20sp"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/calculateExchangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@+id/calculateExchangeAmountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>